--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
 .DS_Store
 node_modules
 /dist
+/src/assets
+vue.config.jstest
+
+# Dossier ignoré - non utilisé
+
+/src/data/Order
+/src/data/Phase
+
+# Fichier ignoré - non utilisé
+
+/src/data/factions.js
+/src/data/Factions/Protoss.js
+/src/data/Factions/Terran.js
+/src/data/Factions/Zerg.js
 
 
 # local env files
